[gd_scene load_steps=6 format=3 uid="uid://clstqocbijma6"]

[ext_resource type="Script" path="res://weapon/old_shoot/shoot.gd" id="1_so4fc"]
[ext_resource type="PackedScene" uid="uid://cwgbesasfx62a" path="res://components/hitbox/hitbox.tscn" id="2_h0006"]
[ext_resource type="Texture2D" uid="uid://wnimge47tcig" path="res://weapon/old_shoot/shoot.png" id="3_e8bmv"]
[ext_resource type="AudioStream" uid="uid://sipghqosom7s" path="res://weapon/old_shoot/shoot.mp3" id="4_5ixkj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bj2qv"]
radius = 18.3333

[node name="shoot" type="RigidBody2D"]
script = ExtResource("1_so4fc")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(20, 20)
shape = SubResource("CircleShape2D_bj2qv")

[node name="HitBox" parent="." instance=ExtResource("2_h0006")]
collision_layer = 2
collision_mask = 2

[node name="Collision2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(20, 20)
shape = SubResource("CircleShape2D_bj2qv")

[node name="Texture" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_e8bmv")

[node name="shoot_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5ixkj")

[connection signal="area_entered" from="HitBox" to="." method="_on_hitbox_area_entered"]
